# ChangeLog for xfce-extra/xfce4-appfinder
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce4-appfinder-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-appfinder-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
