@@ -3,13 +3,13 @@ Hash: SHA1
 
 DIST xfce4-appfinder-4.5.92.tar.bz2 326485 RMD160 838a3a2d09792ab5b428ca38407626b6da531e13 SHA1 92d6e635916fc4e44af45764eb1a507cad22aca7 SHA256 dd47739347b6a00e3a5183cdd21d3fed4b6e9d7a2a171b226ac27c781eeb03d5
 EBUILD xfce4-appfinder-4.5.92.ebuild 587 RMD160 3925539029322a8da8162701613c83643bac93aa SHA1 1892dfea0cd27d416879fac9366219746e63aaeb SHA256 fc954f2fddf3a3e19ef4e31a5ba56d6ff58898a5bc549105b21a788644684bf5
-EBUILD xfce4-appfinder-9999.ebuild 596 RMD160 3013c2252b201ffd5c3da43ce3908cf675a2210d SHA1 ec30ccfd8c9fca854e51d74184f52e22b1e0da61 SHA256 9b169a45647d944ff5cef03d3b29eeb96ceb896ec1e889d12f47efd0a2374e93
-MISC ChangeLog 360 RMD160 f4dda78fa52e59b652180719fe9809963b219450 SHA1 904ebca2c9c8645ebf9c8d2d12affda03d6cb68d SHA256 da1c4d0b492108a8dc2aeb81b59cfde4a74013a1a51b978a7c0e2b5f41ff4feb
+EBUILD xfce4-appfinder-9999.ebuild 681 RMD160 47579ce3702dcd05eceb13db6b4e793498e40e5f SHA1 cfc9d63d4cf6b9e840248a43847d444e0a9c170d SHA256 c4248ad06e950ed9eb74eca68b34dab50f4194060b40e75d1051a817ee15f604
+MISC ChangeLog 463 RMD160 5642bafdba99221402987fa6249fffa70e4cbf7c SHA1 05601abce7c628f709850eb85b1acb0ba36e0585 SHA256 e18a6acaca711b70044fa2cb3def45ec7ea5e36d9242a03511b840895c815352
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtgoACgkQKhnDs22gwa+/CACgzG8YG6KomJp7iVDnoxUkrq2v
-XcAAoNoCk1VHWrlbTX0z0aGRe2JFeNrv
-=PZkb
+iEYEARECAAYFAkk+kEYACgkQKhnDs22gwa+hagCg5O1uG2KhsDXFvISKj1dAhRyv
+xWkAoO4h9e9QYsTelZj9gWqhFzZJycPb
+=0Nzj
 -----END PGP SIGNATURE-----
