@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-appfinder-9999.ebuild:
+  Fixed make check
+
 *xfce4-appfinder-4.5.92 (14 Nov 2008)
 
   14 Nov 2008; Christoph Mende <angelos@gentoo.org>
